--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
 		<div id="prompt">
 			<div class="card">
 				<p class="message">Prompt message here...</p>
-				<div class="action">
-					<!-- <button class="no">No</button>
-					<button class="yes">Yes</button> -->
-				</div>
+				<div class="action"></div>
 			</div>
 		</div>
 	</body>
