slight fixes & improvements

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 				</div>
 			</header>
 			<div id="grid"></div>
-			<button id="about-toggler" type="button">?</button>
+			<button id="about-toggler" type="button">
+				<img class="help_icon" src="help.png" alt="help icon" />
+			</button>
 			<footer>
 				<h6>Created by:</h6>
 				<p class="author">Rodniel G. Briones</p>
@@ -52,8 +54,7 @@
 				</p>
 			</section>
 			<section>
-				<h1>Struggling to win?</h1>
-				<h4>Tips:</h4>
+				<h1>How to win?</h1>
 				<ol class="tips-list">
 					<li>Swipe left and right several times.</li>
 					<li>Build a higher tile in a corner.</li>
@@ -68,16 +69,16 @@
 					<a href="https://www.google.com/amp/s/www.wikihow.com/Beat-2048%3famp=1">WikiHow</a>
 				</p>
 			</section>
-			<aside>
+			<section class="note">
 				<h4>Note:</h4>
 				<p>
 					This is a revised version of the game.<br />If you wish to play the original version head
 					to <a href="https://play2048.co">https://play2048.co</a>
 				</p>
-			</aside>
+			</section>
 			<section>
 				<h1>Do you like this game?</h1>
-				<p>Download the original versions of the game</p>
+				<p>Download the original version</p>
 				<a
 					class="download-link"
 					href="https://apps.apple.com/us/app/2048-by-gabriele-
