added development & production environment using webpack

--- a/src/template.html
+++ b/src/template.html
@@ -5,8 +5,6 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>2048</title>
-		<link rel="stylesheet" href="style.min.css" />
-		<script src="main.js"></script>
 	</head>
 	<body>
 		<main>
@@ -25,7 +23,7 @@
 			</header>
 			<div id="grid"></div>
 			<button id="about-toggler" type="button">
-				<img class="help_icon" src="help.png" alt="help icon" />
+				<img class="help_icon" src="./icons/help.png" alt="help icon" />
 			</button>
 			<footer>
 				<h6>Created by:</h6>
