added meta tags

--- a/src/template.html
+++ b/src/template.html
@@ -4,6 +4,18 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="title" content="2048 Game" />
+		<meta name="description" content="A number-matching puzzle game with animations" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://nielbriones2048.netlify.app/" />
+		<meta property="og:title" content="2048 Game" />
+		<meta property="og:description" content="A number-matching puzzle game with animations" />
+		<meta property="og:image" content="./2048.png" />
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://nielbriones2048.netlify.app/" />
+		<meta property="twitter:title" content="2048 Game" />
+		<meta property="twitter:description" content="A number-matching puzzle game with animations" />
+		<meta property="twitter:image" content="./2048.png" />
 		<link rel="apple-touch-icon" sizes="180x180" href="./icons/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="./icons/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="./icons/favicon-16x16.png" />
